kubernetes/apps/network/envoy-gateway/config/backendtrafficpolicy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: backend
spec:
  targetRefs:
    - &target
      group: gateway.networking.k8s.io
      kind: Gateway
      name: internal-root
    - <<: *target
      name: internal
    - <<: *target
      name: external
  compression:
    - type: Brotli
    - type: Gzip
